# endeavor

./: .gitignore  CMakeLists.txt  Kavoon-Regular.h  OFL11  README.md  Team210.nfo  e.c  gfx.frag  gfx.h  sequence.glsl  sequence.h  sfx.frag  sfx.h
font/: font.h  font.py  pack.py  strings.txt
gfx/: fourtwenty.frag  fourtwenty.h  greet.frag  greet.h  hangout.frag  hangout.h  load.frag  load.h  logo210.frag  logo210.h  logosmall.frag  logosmall.h  nr4.frag  nr4.h  post.frag  post.h  props.frag  qm.frag  qm.h  rshort.frag  solskogen.frag  solskogen.h  surface.frag  surface.h  text.frag  text.h  trip.frag  trip.h  ui.frag
minification/: shader-compressor.py
sfxpack/: sequence.h
test/: dfloat.py  float.py
